fixed wrong padding

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
 
 body {
     background-color: rgba(122, 191, 191, .5);
-    padding: 10px;
     max-width: 414px;
     margin: 0 auto;
     font-family: 'Bebas Neue', sans-serif;
